# MyWorkStealingPool

./: CMakeLists.txt  README.md
inc/: itasksys.h  test.h  thread_pool.h
src/: thread_pool.cpp
test/: main.cpp  pingpong_task.h
